{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "38e3ddaf-6fbc-41f8-a714-083bb9b0574a",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "beb423ab-2a8c-4afa-971d-d3e4e7d4825b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.401298E-45)",
                    "initialStateCheck": true
                },
                {
                    "name": "Order",
                    "type": "Button",
                    "id": "f478168c-219e-4737-a844-4b572a708e59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "e2a899ce-e986-4100-a163-50e80b7e2b56",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotation",
                    "type": "Value",
                    "id": "b5f58083-463c-4e26-92a9-1e37643e007d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "b436be2d-6213-4afc-9bea-2adf0512482d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "acb724f6-85c0-4cc5-9fa0-993cd1f82b5a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a3aee63-8909-4e42-b4a3-d8d44af7f412",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Order",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "UpDownLeftRight",
                    "id": "101ea788-0da1-4bed-a60c-44d387ad2af1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "996babde-2bf4-40e1-8ee6-4b1f514fa826",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d3106437-a20b-4b9e-92be-83de51f37408",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "187cee24-0a11-4d35-9003-6e00f0370c06",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "376c2903-f0f3-49c7-8451-da3ccc90a795",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftRight",
                    "id": "74f3f827-e1a6-42e9-a495-def86578b761",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "be20662f-a01d-42b6-93b2-c722289f4630",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "36743fe2-9031-4745-ab58-ce7e1bf75add",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "UpDown",
                    "id": "48144a76-e1cf-4151-81c8-7f17f743b4ad",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "952d3db9-8864-4c54-9540-69fde2dc771d",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "ca8e5d24-828c-4c8e-9038-7cf207fed64f",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}